Fixed overflow bug on small screens

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -85,7 +85,7 @@
       font-size: $fs-150;
       letter-spacing: 2px;
       color: $color-dark-800;
-      transform: translate(0, 75%);
+      transform: translate(-100%, 75%);
       opacity: 0;
 
       pointer-events: none;
@@ -95,7 +95,6 @@
 
     &:hover::after {
       @include mediaPad {
-        transform: translate(-100%, 75%);
         opacity: 1;
 
         pointer-events: all;
@@ -138,7 +137,7 @@
     left: 0;
     right: 0;
     z-index: 1;
-    
+
     transform: translateY(-200vh);
     @extend %transition;
   }
